[package]
name = "mdiff"
version = "0.1.0"
authors = ["Matthias Diener <matthias.diener@gmail.com>"]
description = "Simple visual diff viewer."
license = "MIT"
documentation = "https://github.com/matthiasdiener/mdiff"
homepage = "https://github.com/matthiasdiener/mdiff"
repository = "https://github.com/matthiasdiener/mdiff"
edition = "2018"

[dependencies]
difference = "2.0"
sourceview = "0.7.0"

[dependencies.gtk]
version = "0.7.1"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]
